--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+This is an app created in collaboration with UCSD.
+
 unfolding_app_template and UC San Diego/Coursera MOOC starter code
 ==================================================================
 
